# hw_8_part_1

./: pyproject.toml
hw_8_part_1/: find.py  models.py  seeds.py
