[tool.poetry]
name = "hw-8-part-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw_8_part_1"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
redis = "^5.0.0"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
